<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/toolbar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectGeometryLayout">

            <ImageButton
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/button_bar_background"
                android:contentDescription="@string/clear"
                android:onClick="clear"
                android:src="@drawable/ic_round_delete_outline_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/undoButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/restartButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ImageButton
                android:id="@+id/restartButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/button_bar_background"
                android:contentDescription="@string/restart"
                android:onClick="restart"
                android:src="@drawable/ic_round_refresh_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/clearButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/undoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bar_background"
                android:contentDescription="@string/undo"
                android:onClick="undo"
                android:src="@drawable/ic_menu_undo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/redoButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/clearButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/redoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bar_background"
                android:contentDescription="@string/redo"
                android:onClick="redo"
                android:src="@drawable/ic_menu_redo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/commitChangesButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/undoButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/commitChangesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bar_background"
                android:contentDescription="@string/commit_edits"
                android:onClick="stop"
                android:src="@drawable/ic_round_commit_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/redoButton"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <android.widget.RelativeLayout
            android:id="@+id/selectGeometryLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select geometry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/selectGeometryDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:labelFor="@id/selectGeometryDropdown" />

            </com.google.android.material.textfield.TextInputLayout>

        </android.widget.RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
